--- a/autorest-rev/pom.xml
+++ b/autorest-rev/pom.xml
@@ -174,6 +174,21 @@
 			<artifactId>ehcache</artifactId>
 			<version>2.9.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-core</artifactId>
+			<version>8.1.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-commons</artifactId>
+			<version>8.1.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-query</artifactId>
+			<version>8.1.1.Final</version>
+		</dependency>
 
 	</dependencies>
 	<build>
