GZip compression enabled

--- a/autorest-rev/pom.xml
+++ b/autorest-rev/pom.xml
@@ -199,7 +199,11 @@
 			<artifactId>infinispan-query</artifactId>
 			<version>8.1.1.Final</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>autorest-rev</finalName>
