--- a/autorest-rev/src/main/resources/application.properties
+++ b/autorest-rev/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
-jdbc.url=jdbc:mysql://DLUDGUHA57067:3306/mindex_main
+jdbc.url=jdbc:mysql://localhost:3306/mindex_main
 jdbc.username=root
 jdbc.password=passw0rd
 
